--- a/background.html
+++ b/background.html
@@ -5,24 +5,12 @@ var _nameContainer = {};
 
 chrome.extension.onRequest.addListener(
   function(request, sender, sendResponse) {
-    if (request.jump_tabs) {
-      var tabName = request.tabName;
-      chrome.tabs.getAllInWindow(null, function(tabs) {
-        var tab;
-        for (var i = 0; i < tabs.length; ++i) {
-          tab = tabs[i];  
-          if (_nameContainer[tab.id] == tabName) {
-            chrome.tabs.update(tab.id, {selected: true});
-          }
-        }
-      })
-    }
+    console.log('I am here finally');
 
-    if (request.name_tab) {
-      chrome.tabs.getSelected(null, function(tab){
-        _nameContainer[tab.id] = request.tabName;
-      });
-    }
+    chrome.tabs.query({'url':'*://soundcloud.com/*'}, function(tabs){
+        console.log(tabs[0]);
+        chrome.tabs.update(tabs[0].id, {selected: true});
+    });
   }
 );
 </script>
